--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "CLI for identifying a creating trades"
 authors = ["AJ <11035621+axlj45@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -25,7 +24,9 @@ alpaca-py = "^0.21.2"
 python-dotenv = "^1.0.1"
 firebase-admin = "^6.5.0"
 
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+pytrader = "pytrader.main:cli()"
