--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pytrader"
-version = "0.1.0"
+version = "0.1.1"
 description = "CLI for identifying a creating trades"
 authors = ["AJ <11035621+axlj45@users.noreply.github.com>"]
 license = "MIT"
@@ -29,4 +29,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-pytrader = "pytrader.main:cli()"
+pytrader = "pytrader.main:cli"
