--- a/deployment/example.env
+++ b/deployment/example.env
@@ -1,4 +1,13 @@
+
+# Broker Configuration
 alpaca_api_key=<alpaca_api_key>
 alpaca_secret_key=>alpaca_secret_key>
 alpaca_paper=True
+
+# Database
 firebase_creds=/absolute/path/to/firebase/admin/sdk-key-file.json
+
+# Trading Parameters
+max_single_symbol = 0.5
+max_portfolio_usage = 1
+use_margin = False
