--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,11 @@ firebase-admin = "^6.5.0"
 [tool.poetry.dev-dependencies]
 notebook = "7.3.2"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.1.2"
+pytest-cov = "^3.0"
+pytest-mock = "^3.6.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
