--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ alpaca-py = "^0.21.2"
 python-dotenv = "^1.0.1"
 firebase-admin = "^6.5.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 notebook = "7.3.2"
 pytest = "^7.1.2"
 pytest-cov = "^3.0"
