--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Build and test
 
-on: pull_request
+on:
+  pull_request:
+    branches: ['**']
+  push:
+    branches:
+      - main
 
 jobs:
   ci:
