feat: add deployment scripts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,23 @@
-name: Build and test
+name: build
 
 on:
-  pull_request:
-    branches: ['**']
   push:
-    branches:
-      - main
 
 jobs:
-  ci:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: [self-hosted, build]
     steps:
       - uses: actions/checkout@v4
-      - name: Install Python
-        uses: actions/setup-python@v4
 
-      - name: Install poetry
-        uses: abatilo/actions-poetry@v4
-      - name: Setup a local virtual environment
-        run: |
-          poetry config virtualenvs.create true --local
-          poetry config virtualenvs.in-project true --local
-      - uses: actions/cache@v3
-        name: Define a cache for the virtual environment based on the dependencies lock file
+      - uses: actions/setup-python@v5
         with:
-          path: ./.venv
-          key: venv-${{ hashFiles('poetry.lock') }}
-      - name: Install the project dependencies
+          python-version: "3.11"
+
+      - name: Install Poetry
+        run: pipx install poetry
+
+      - name: Install deps
         run: poetry install
-      - name: Run the automated tests
-        run: poetry run pytest -v
+
+      - name: Tests
+        run: poetry run pytest -q
